Added authentication with JWT.

--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   "homepage": "https://github.com/gustavoisensee/nodejsapi#readme",
   "dependencies": {
     "body-parser": "^1.15.1",
-    "express": "^4.13.4"
+    "express": "^4.13.4",
+    "jsonwebtoken": "^6.2.0",
+    "morgan": "^1.7.0"
   }
 }
