Added spdy/http2 and certificate

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "body-parser": "^1.15.1",
     "express": "^4.13.4",
     "jsonwebtoken": "^6.2.0",
-    "morgan": "^1.7.0"
+    "morgan": "^1.7.0",
+    "spdy": "^3.3.3"
   }
 }
