--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "body-parser": "^1.15.1",
     "express": "^4.13.4",
+    "express-promise-router": "^1.0.0",
     "jsonwebtoken": "^6.2.0",
     "lodash": "^4.12.0",
     "morgan": "^1.7.0",
