Renamed folder app to server. created base.js in model.
Created other structure of route with a base route responsable to execute the functions that will return something.

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "it's a simple project to test nodejs api rest.",
   "main": "app.js",
   "scripts": {
+    "start": "node app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
